--- a/ko/index.html
+++ b/ko/index.html
@@ -21,7 +21,7 @@
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet"> -->
 
     <!-- Custom styles for this template -->
-    <link href="semicolon.css" rel="stylesheet">
+    <link href=".../semicolon.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines-->
     <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
