--- a/ko/index.html
+++ b/ko/index.html
@@ -15,17 +15,17 @@
     <title>Semicolon</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet"> -->
 
     <!-- Custom styles for this template -->
-    <link href=".../semicolon.css" rel="stylesheet">
+    <link href="../semicolon.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines-->
     <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="js/ie-emulation-modes-warning.js"></script>
+    <script src="../js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -45,7 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#intro"><span>세미-콜론</span></a>
+          <a class="navbar-brand" href="#intro"><span>Semicolon</span></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right">
@@ -67,8 +67,8 @@
       <section class="main_box" id="intro">
         <div>
           <h1 style="font-size: 64px;">Semicolon</h1>
-          <h2 style="margin-bottom: 3em">Two dots for the future.</h2>
-          <a class="intro-btn-goto-project scrolly" data-gravity="bottom" href="#projects">OUR PROJECTS</a>
+          <h2 style="margin-bottom: 3em">미래를 향한 두 개의 점</h2>
+          <a class="intro-btn-goto-project scrolly" data-gravity="bottom" href="#projects">프로젝트 보기</a>
         </div>
       </section>
 
@@ -94,32 +94,34 @@
             akzm9999@gmail.com
           </div>
           <br>
-          If you want to know more about us, you can see our projects under.<br>
+          더 알고 싶으시다면, 저희의 프로젝트들을 눈여겨 봐 주세요.<br>
         </p>
       </section>
 
       <section class="main_box" id="projects">
-        <h1>Projects</h1>
+        <h1>프로젝트</h1>
         <p class="lead">
-          Nothing to be shown!<br>
-          Now, We don't have any projects to show you.<br>
-          But we will make you surprised!<br>
+          :(<br>
+          <hr width="10%">
+          이런, 보여줄 게 없네요!<br>
+          <br>
+          아직은 보여줄 것이 없지만, 곧 놀랄 만한 것을 보여드릴 것입니다.<br>
           <br>
         </p>
       </section>
 
       <section class="main_box" id="team">
-        <h1>Team Members</h1>
+        <h1>팀원들</h1>
         <div class="team-profile-row">
           <div class="team-profile-item">
             <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
-            <h3>Hokyun Jeon</h3>
-            <h4>Chief (Team Leader)</h4>
+            <h3>전호균</h3>
+            <h4>리더 (팀장)</h4>
           </div>
           <div class="team-profile-item">
             <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
-            <h3>Hyeonwoo Lee</h3>
-            <h4>Semi-Chief (Team Leader)</h4>
+            <h3>이현우</h3>
+            <h4>세미리더 (부팀장)</h4>
           </div>
           <div class="team-profile-item">
             <img class="team-profile-img  circle" src="http://placehold.it/178x178"/>
@@ -163,11 +165,11 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-    <script src="js/semicolon.js"></script>
+    <script src="../js/ie10-viewport-bug-workaround.js"></script>
+    <script src="../js/semicolon.js"></script>
   </body>
 </html>
