--- a/en/index.html
+++ b/en/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="Hokyun Jeon">
 
+    <meta name="theme-color" content="#db5945">
+
     <!-- <link href="http://fonts.googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" rel="stylesheet"> -->
