--- a/ko/index.html
+++ b/ko/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Hokyun Jeon">
 
-    <meta name="theme-color" content="#db5945">
+    <meta name="theme-color" content="#2E2E3F">
 
     <!-- <link href="http://fonts.googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet">
 
@@ -47,7 +47,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#intro"><span>Semicolon</span></a>
+          <a class="navbar-brand" style="display: none;" href="#intro"><span>Semicolon</span></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right">
@@ -67,8 +67,9 @@
       <!-- a class="fab" href="#intro">UP</a-->
 
       <section class="main_box" id="intro">
-        <div>
-          <h1 style="font-size: 64px;">Semicolon</h1>
+        <div style="background-color: #000; filter: blur(5px);"></div> <!-- 블러효과 -->
+        <div style="display: none;" data-fadeIn="true" data-fadeInDuration="1000">
+          <h1>Semicolon</h1>
           <h2 style="margin-bottom: 3em">미래를 향한 두 개의 점</h2>
           <a class="intro-btn-goto-project scrolly" data-gravity="bottom" href="#projects">프로젝트 보기</a>
         </div>
@@ -90,9 +91,8 @@
           <h2>팀장</h2>
           <br>
           <div class="team-profile-item">
-            <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
+            <img class="team-profile-img" src="../img/profile/h-jeon.png"/>
             <h3>전호균</h3>
-            <h4>리더 (팀장)</h4>
             akzm9999@gmail.com
           </div>
           <br>
@@ -110,42 +110,58 @@
           아직은 보여줄 것이 없지만, 곧 놀랄 만한 것을 보여드릴 것입니다.<br>
           <br>
         </p>
+
+        <iframe scrolling="no" width="100%" height="100%" frameborder="no" rel="nofollow" src="projects.html">
+          지원되지 않는 부라우저입니다.
+        </iframe>
       </section>
 
       <section class="main_box" id="team">
         <h1>팀원들</h1>
         <div class="team-profile-row">
           <div class="team-profile-item">
-            <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
+            <img class="team-profile-img" src="../img/profile/h-jeon.png"/>
             <h3>전호균</h3>
-            <h4>리더 (팀장)</h4>
+            <h4>리더</h4>
           </div>
           <div class="team-profile-item">
-            <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
             <h3>이현우</h3>
-            <h4>세미리더 (부팀장)</h4>
+            <h4>세미리더</h4>
           </div>
           <div class="team-profile-item">
-            <img class="team-profile-img  circle" src="http://placehold.it/178x178"/>
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
             <h3>Hyeonwoo Lee</h3>
-            <h4>Semi-Chief (Team Leader)</h4>
+            <h4>Semi-Chief</h4>
           </div>
+          <div class="team-profile-item">
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Hyeonwoo Lee</h3>
+            <h4>Semi-Chief</h4>
+          </div>
+        <!--
         </div>
         <div class="team-profile-row">
+        -->
           <div class="team-profile-item">
-            <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
             <h3>Hokyun Jeon</h3>
-            <h4>Chief (Team Leader)</h4>
+            <h4>Chief</h4>
           </div>
           <div class="team-profile-item">
-            <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
             <h3>Hyeonwoo Lee</h3>
-            <h4>Semi-Chief (Team Leader)</h4>
+            <h4>Semi-Chief</h4>
           </div>
           <div class="team-profile-item">
-            <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
             <h3>Hyeonwoo Lee</h3>
-            <h4>Semi-Chief (Team Leader)</h4>
+            <h4>Semi-Chief</h4>
+          </div>
+          <div class="team-profile-item">
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Hyeonwoo Lee</h3>
+            <h4>Semi-Chief</h4>
           </div>
         </div>
       </section>
