--- a/ko/index.html
+++ b/ko/index.html
@@ -22,8 +22,9 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet"> -->
 
-    <!-- Custom styles for this template -->
     <link href="../semicolon.css" rel="stylesheet">
+    <link href="../css/semicolon-box.css" rel="stylesheet">
+    <link href="../css/semicolon-navbar.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines-->
     <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -54,6 +55,7 @@
             <li><a class="navbar-menu" href="#about"><span>우리는</span></a></li>
             <li><a class="navbar-menu" href="#projects"><span>프로젝트</span></a></li>
             <li><a class="navbar-menu" href="#team"><span>팀</span></a></li>
+            <li><a class="navbar-menu" href="../join/index.html"><span>가입</span></a></li>
             <li><a class="navbar-menu" href="준비중"><span>블로그</span></a></li>
             <li><a class="navbar-menu" href="http://www.github.com/team-semicolon"><span>GitHub</span></a></li>
           </ul>
