En도 Ko와 동일하게 수정, 반응형으로 수정

--- a/ko/index.html
+++ b/ko/index.html
@@ -128,42 +128,48 @@
           </div>
           <div class="team-profile-item">
             <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>이현우</h3>
-            <h4>세미리더</h4>
+            <h3>테스트</h3>
+            <h4>한글</h4>
           </div>
           <div class="team-profile-item">
             <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>Hyeonwoo Lee</h3>
-            <h4>Semi-Chief</h4>
+            <h3>테스트</h3>
+            <h4>한글</h4>
           </div>
           <div class="team-profile-item">
             <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>Hyeonwoo Lee</h3>
-            <h4>Semi-Chief</h4>
-          </div>
-        <!--
-        </div>
-        <div class="team-profile-row">
-        -->
-          <div class="team-profile-item">
-            <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>Hokyun Jeon</h3>
-            <h4>Chief</h4>
+            <h3>Test</h3>
+            <h4>ASCII</h4>
           </div>
           <div class="team-profile-item">
             <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>Hyeonwoo Lee</h3>
-            <h4>Semi-Chief</h4>
+            <h3>테스트</h3>
+            <h4>한글</h4>
           </div>
           <div class="team-profile-item">
             <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>Hyeonwoo Lee</h3>
-            <h4>Semi-Chief</h4>
+            <h3>테스트</h3>
+            <h4>한글</h4>
           </div>
           <div class="team-profile-item">
             <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>Hyeonwoo Lee</h3>
-            <h4>Semi-Chief</h4>
+            <h3>Test</h3>
+            <h4>ASCII</h4>
+          </div>
+          <div class="team-profile-item">
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>테스트</h3>
+            <h4>한글</h4>
+          </div>
+          <div class="team-profile-item">
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>테스트</h3>
+            <h4>한글</h4>
+          </div>
+          <div class="team-profile-item">
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Test</h3>
+            <h4>ASCII</h4>
           </div>
         </div>
       </section>
