--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Hokyun Jeon">
 
-    <meta name="theme-color" content="#db5945">
+    <meta name="theme-color" content="#2E2E3F">
 
     <!-- <link href="http://fonts.googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet">
 
@@ -22,8 +22,9 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet"> -->
 
-    <!-- Custom styles for this template -->
     <link href="../semicolon.css" rel="stylesheet">
+    <link href="../css/semicolon-box.css" rel="stylesheet">
+    <link href="../css/semicolon-navbar.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines-->
     <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -47,13 +48,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#intro"><span>Semicolon</span></a>
+          <a class="navbar-brand" style="display: none;" href="#intro"><span>Semicolon</span></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right">
             <li><a class="navbar-menu" href="#about"><span>About</span></a></li>
             <li><a class="navbar-menu" href="#projects"><span>Projects</span></a></li>
-            <li><a class="navbar-menu" href="#team"><span>Team</span></a></li>
+            <li><a class="navbar-menu" href="#team"><span>Members</span></a></li>
+            <li><a class="navbar-menu" href="../join/index.html"><span>Join</span></a></li>
             <li><a class="navbar-menu" href="준비중"><span>Blog</span></a></li>
             <li><a class="navbar-menu" href="http://www.github.com/team-semicolon"><span>GitHub</span></a></li>
           </ul>
@@ -67,83 +69,119 @@
       <!-- a class="fab" href="#intro">UP</a-->
 
       <section class="main_box" id="intro">
-        <div>
-          <h1 style="font-size: 64px;">Semicolon</h1>
-          <h2 style="margin-bottom: 3em">Two dots for the future.</h2>
-          <a class="intro-btn-goto-project scrolly" data-gravity="bottom" href="#projects">OUR PROJECTS</a>
+        <div style="background-color: #000; filter: blur(5px);"></div> <!-- 블러효과 -->
+        <div style="display: none;" data-fadeIn="true" data-fadeInDuration="1000">
+          <h1>Semicolon</h1>
+          <h2 style="margin-bottom: 3em">two dots for the future</h2>
+          <a class="intro-btn-goto-project scrolly" data-gravity="bottom" href="#projects">View Our Projects</a>
         </div>
       </section>
 
       <section class="main_box" id="about">
         <h1>ABOUT US</h1>
         <p>
-          We are a team 'Semicolon'.<br>
-          We makes services such as Softwares, Video Games, and Web-Services.<br>
-          ('Goliath Games')
+          This is Team Semicolon's Official Website.<br>
+          We create something amazing.<br>
+          GAMES, SOFTWARES
           <br>
           <br>
-          We work in Jeonju, South Korea (Republic of Korea).<br>
+          We are in Jeonju, Republic of Korea.<br>
           <br>
           <br>
           <hr width="10%">
           <br>
-          <h2>Team Master</h2>
+          <h2>Leader</h2>
           <br>
           <div class="team-profile-item">
-            <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
+            <img class="team-profile-img" src="../img/profile/h-jeon.png"/>
             <h3>Hokyun Jeon</h3>
-            <h4>Chief (Team Leader)</h4>
             akzm9999@gmail.com
           </div>
           <br>
-          If you want to know more about us, you can see our projects under.<br>
+          If you want something more about us, See our projects (Biography).<br>
         </p>
       </section>
 
       <section class="main_box" id="projects">
-        <h1>Projects</h1>
+        <h1>Our projects</h1>
         <p class="lead">
-          Nothing to be shown!<br>
-          Now, We don't have any projects to show you.<br>
-          But we will make you surprised!<br>
+          :(<br>
+          <hr width="10%">
+          Oh, nose!<br>
+          <br>
+          There's nothing to show, but soon...<br>
           <br>
         </p>
+
+        <iframe scrolling="no" width="100%" height="100%" frameborder="no" rel="nofollow" src="projects.html">
+          Sorry, your browser is out-dated. Please update it.
+        </iframe>
       </section>
 
       <section class="main_box" id="team">
-        <h1>Team Members</h1>
+        <h1>Members</h1>
         <div class="team-profile-row">
           <div class="team-profile-item">
-            <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
+            <img class="team-profile-img" src="../img/profile/h-jeon.png"/>
             <h3>Hokyun Jeon</h3>
-            <h4>Chief (Team Leader)</h4>
+            <h4>Leader</h4>
           </div>
           <div class="team-profile-item">
-            <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
-            <h3>Hyeonwoo Lee</h3>
-            <h4>Semi-Chief (Team Leader)</h4>
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Test</h3>
+            <h4>K</h4>
           </div>
           <div class="team-profile-item">
-            <img class="team-profile-img  circle" src="http://placehold.it/178x178"/>
-            <h3>Hyeonwoo Lee</h3>
-            <h4>Semi-Chief (Team Leader)</h4>
-          </div>
-        </div>
-        <div class="team-profile-row">
-          <div class="team-profile-item">
-            <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
-            <h3>Hokyun Jeon</h3>
-            <h4>Chief (Team Leader)</h4>
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Test</h3>
+            <h4>1234</h4>
           </div>
           <div class="team-profile-item">
-            <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
-            <h3>Hyeonwoo Lee</h3>
-            <h4>Semi-Chief (Team Leader)</h4>
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Test</h3>
+            <h4>ASCII</h4>
+          </div><div class="team-profile-item">
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Test</h3>
+            <h4>K</h4>
           </div>
           <div class="team-profile-item">
-            <img class="team-profile-img circle" src="http://placehold.it/178x178"/>
-            <h3>Hyeonwoo Lee</h3>
-            <h4>Semi-Chief (Team Leader)</h4>
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Test</h3>
+            <h4>1234</h4>
+          </div>
+          <div class="team-profile-item">
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Test</h3>
+            <h4>ASCII</h4>
+          </div><div class="team-profile-item">
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Test</h3>
+            <h4>K</h4>
+          </div>
+          <div class="team-profile-item">
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Test</h3>
+            <h4>1234</h4>
+          </div>
+          <div class="team-profile-item">
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Test</h3>
+            <h4>ASCII</h4>
+          </div><div class="team-profile-item">
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Test</h3>
+            <h4>K</h4>
+          </div>
+          <div class="team-profile-item">
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Test</h3>
+            <h4>1234</h4>
+          </div>
+          <div class="team-profile-item">
+            <img class="team-profile-img" src="http://placehold.it/178x178"/>
+            <h3>Test</h3>
+            <h4>ASCII</h4>
           </div>
         </div>
       </section>
