--- a/ko/index.html
+++ b/ko/index.html
@@ -14,7 +14,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" rel="stylesheet"> -->
 
-    <title>Semicolon</title>
+    <title>106Bytes</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.css" rel="stylesheet">
@@ -71,8 +71,8 @@
       <section class="main_box" id="intro">
         <div style="background-color: #000; filter: blur(5px);"></div> <!-- 블러효과 -->
         <div style="display: none;" data-fadeIn="true" data-fadeInDuration="1000">
-          <h1>Semicolon</h1>
-          <h2 style="margin-bottom: 3em">미래를 향한 두 개의 점</h2>
+          <h1>106Bytes</h1>
+          <h2 style="margin-bottom: 3em">미래를 향한 비트의 향연</h2>
           <a class="intro-btn-goto-project scrolly" data-gravity="bottom" href="#projects">프로젝트 보기</a>
         </div>
       </section>
@@ -80,7 +80,7 @@
       <section class="main_box" id="about">
         <h1>우리는 누구일까요?</h1>
         <p>
-          저희는 '세미콜론' 팀입니다.<br>
+          저희는 '106바이트' 팀입니다.<br>
           소프트웨어, 비디오게임, 그리고 웹서비스에 대한 것들을 창조합니다.<br>
           ('Goliath Games')
           <br>
