--- a/ko/index.html
+++ b/ko/index.html
@@ -48,7 +48,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" style="display: none;" href="#intro"><span>Semicolon</span></a>
+          <a class="navbar-brand" style="display: none;" href="#intro"><span>106Bytes</span></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right">
@@ -57,7 +57,7 @@
             <li><a class="navbar-menu" href="#team"><span>팀</span></a></li>
             <li><a class="navbar-menu" href="../join/index.html"><span>가입</span></a></li>
             <li><a class="navbar-menu" href="준비중"><span>블로그</span></a></li>
-            <li><a class="navbar-menu" href="http://www.github.com/team-semicolon"><span>GitHub</span></a></li>
+            <li><a class="navbar-menu" href="http://www.github.com/team-106bytes"><span>GitHub</span></a></li>
           </ul>
         </div><!--/.nav-collapse-->
       </div>
@@ -94,8 +94,8 @@
           <br>
           <div class="team-profile-item">
             <img class="team-profile-img" src="../img/profile/h-jeon.png"/>
-            <h3>전호균</h3>
-            akzm9999@gmail.com
+            <h3>106Bytes</h3>
+            team-106bytes.github.io
           </div>
           <br>
           더 알고 싶으시다면, 저희의 프로젝트들을 눈여겨 봐 주세요.<br>
