join페이지 수정

--- a/ko/index.html
+++ b/ko/index.html
@@ -81,18 +81,20 @@
         <h1>우리는 누구일까요?</h1>
         <p>
           저희는 '106바이트' 팀입니다.<br>
-          소프트웨어, 비디오게임, 그리고 웹서비스에 대한 것들을 창조합니다.<br>
-          ('Goliath Games')
+          프로그래밍을 중심으로 컴퓨터 공학에 대해 함께 배우고,<br>
+          여러 프로젝트를 진행하고 있습니다.<br><br>
           <br>
           <br>
-          저희는 한국의 전주에서 활동하고 있습니다.<br>
+          저희는 한국의 전주, 전일고등학교에서 조직되었고 활동하고 있습니다.<br>
+          SINCE 2017<br>
           <br>
           <br>
           <hr width="10%">
           <br>
-          <h2>팀장</h2>
+          <h2>팀 로고</h2>
           <br>
-          <div class="team-profile-item">
+          (아직 로고는 준비 중입니다)<br>
+          <div class="team-profile-item team-profile-teamlogoitem">
             <img class="team-profile-img" src="../img/profile/h-jeon.png"/>
             <h3>106Bytes</h3>
             team-106bytes.github.io
@@ -113,9 +115,9 @@
           <br>
         </p>
 
-        <iframe scrolling="no" width="100%" height="100%" frameborder="no" rel="nofollow" src="projects.html">
+        <!--iframe scrolling="no" width="100%" height="100%" frameborder="no" rel="nofollow" src="projects.html">
           지원되지 않는 부라우저입니다.
-        </iframe>
+        </iframe-->
       </section>
 
       <section class="main_box" id="team">
@@ -128,48 +130,13 @@
           </div>
           <div class="team-profile-item">
             <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>테스트</h3>
-            <h4>한글</h4>
+            <h3>이현우</h3>
+            <h4></h4>
           </div>
           <div class="team-profile-item">
             <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>테스트</h3>
-            <h4>한글</h4>
-          </div>
-          <div class="team-profile-item">
-            <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>Test</h3>
-            <h4>ASCII</h4>
-          </div>
-          <div class="team-profile-item">
-            <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>테스트</h3>
-            <h4>한글</h4>
-          </div>
-          <div class="team-profile-item">
-            <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>테스트</h3>
-            <h4>한글</h4>
-          </div>
-          <div class="team-profile-item">
-            <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>Test</h3>
-            <h4>ASCII</h4>
-          </div>
-          <div class="team-profile-item">
-            <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>테스트</h3>
-            <h4>한글</h4>
-          </div>
-          <div class="team-profile-item">
-            <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>테스트</h3>
-            <h4>한글</h4>
-          </div>
-          <div class="team-profile-item">
-            <img class="team-profile-img" src="http://placehold.it/178x178"/>
-            <h3>Test</h3>
-            <h4>ASCII</h4>
+            <h3>박혁용</h3>
+            <h4></h4>
           </div>
         </div>
       </section>
