--- a/join/index.html
+++ b/join/index.html
@@ -21,28 +21,112 @@
     <style>
       body {
         font-family: 'Spoqa Han Sans', sans-serif;
+
+        padding: 0;
+        margin: 0;
       }
 
       h1 {
         text-align: center;
       }
+
+      a.btn {
+        transition-duration: .4s;
+
+        padding: 14px;
+
+        border-radius: 5px;
+
+        background: #24283A;
+        color: #FFF;
+
+        text-decoration: none;
+      }
+
+      a.btn:hover {
+        transition-duration: 1s;
+
+        background: #48676E;
+      }
+
+      div.headbar {
+        padding: 14px 0px 14px 0px;
+        margin: 0 0 0 0;
+
+        color: #FFF;
+
+        background: #24283A;
+      }
+
+      div#container {
+        margin-left: auto;
+        margin-right: auto;
+      }
+      div#content {
+        padding: 16px;
+      }
+      @media all and (min-width: 1200px){
+        div#content {
+          width: 1170px;
+
+          margin-left: -585px;
+          position: relative;
+          left: 50%;
+        }
+      }
+      @media all and (min-width: 992px){
+        div#content {
+          width: 970px;
+
+          margin-left: -485px;
+          position: relative;
+          left: 50%;
+        }
+      }
+      @media all and (min-width: 768px){
+        div#content {
+          width: 750px;
+
+          margin-left: -375px;
+          position: relative;
+          left: 50%;
+        }
+      }
+      @media all and (max-width: 768px){
+        div#content {
+          width: auto;
+          position: relative;
+        }
+      }
+
     </style>
 
   </head>
   <body>
-    <h1>106Bytes 1기 부원 모집</h1>
-    <p>
-      가입 지원서는 글 아래에 안내된 링크를 통해 작성할 수 있습니다. 지원서는 테스트는 아닌 간단한 질문으로 구성되어 있습니다.<br>
-      106Bytes에서 첫 활동을 함께 할 학생들을 모집합니다.<br>
-      활동기간은 2017년 3월부터 2018년 2월까지이며, 1학년, 2학년 모두 모집 중입니다. 지원서 접수 마감일은 ()까지이고, 열정이 있다면 떨어질 일은 거의 없을 것 같습니다.<br>
-      <br>
-      자세한 내용은 이곳에서 확인해주세요.<br>
-      <br>
-      자율동아리로서, 일반정규동아리와 별개로 활동가능하다는 점 숙지해주시기 바랍니다.<br>
-      <br>
-      대학 진학 시 컴퓨터공학과 계열을 희망하신다면 진로 탐색에 좋은 기회가 될 것입니다. (물론 희망하지 않더라도 열심히 참여할 의향이 있다면 가능합니다)<br>
-      <br>
-      저희가 당부해드리고 싶은 점은, 의지없이 활동할 학생, 상습적으로 동아리 활동을 하지 않을 학생들은 지원하지 않았으면 좋겠습니다.<br>
-    </p>
+    <div class="headbar">
+      <h1>106Bytes 1기 부원 모집</h1>
+    </div>
+    <div id="container">
+    <div id="content">
+      <p>
+        가입 지원서는 글 아래에 안내된 링크를 통해 작성할 수 있습니다. 지원서는 테스트는 아닌 간단한 질문으로 구성되어 있습니다.<br>
+        106Bytes에서 첫 활동을 함께 할 학생들을 모집합니다.<br>
+        활동기간은 2017년 3월부터 2018년 2월까지이며, 1학년, 2학년 모두 모집 중입니다. 지원서 접수 마감일은 (2017.3.15 수)까지이고, 열정이 있다면 떨어질 일은 거의 없을 것 같습니다.<br>
+        <br>
+        자세한 내용은 이곳에서 확인해주세요.<br>
+        <br>
+        자율동아리로서, 일반정규동아리와 별개로 활동가능하다는 점 숙지해주시기 바랍니다.<br>
+        <br>
+        대학 진학 시 컴퓨터공학과 계열을 희망하신다면 진로 탐색에 좋은 기회가 될 것입니다. (물론 희망하지 않더라도 열심히 참여할 의향이 있다면 가능합니다)<br>
+        <br>
+        저희가 당부해드리고 싶은 점은, 의지없이 활동할 학생, 상습적으로 동아리 활동을 하지 않을 학생들은 지원하지 않았으면 좋겠습니다.<br>
+      </p>
+      <p>
+        <br>
+        <center><a class="btn" href="https://goo.gl/forms/mG3NGEKAsJgliVHL2">지원하기</a></center>
+        <br>
+      </p>
+    </div>
+  </div>
   </body>
 </html>
