--- a/ko/index.html
+++ b/ko/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="utf-8">
@@ -56,8 +56,8 @@
             <li><a class="navbar-menu" href="#projects"><span>프로젝트</span></a></li>
             <li><a class="navbar-menu" href="#team"><span>팀</span></a></li>
             <li><a class="navbar-menu" href="../join/index.html"><span>가입</span></a></li>
-            <li><a class="navbar-menu" href="준비중"><span>블로그</span></a></li>
-            <li><a class="navbar-menu" href="http://www.github.com/team-106bytes"><span>GitHub</span></a></li>
+            <li><a class="navbar-menu" href="https://team-106bytes.github.io/blog/"><span>블로그</span></a></li>
+            <li><a class="navbar-menu" href="https://www.github.com/team-106bytes"><span>GitHub</span></a></li>
           </ul>
         </div><!--/.nav-collapse-->
       </div>
