--- a/ko/index.html
+++ b/ko/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="utf-8">
@@ -48,7 +48,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" style="display: none;" href="#intro"><span>106Bytes</span></a>
+          <a class="navbar-brand" style="display: none;" href="#intro"><span>106B</span></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right">
@@ -61,6 +61,7 @@
           </ul>
         </div><!--/.nav-collapse-->
       </div>
+      <hr style="width: 100%; display: none;border-width: 2px; border-color: #03a9f4; margin:0;">
     </nav>
 
     <div class="container-fluid">
@@ -71,38 +72,43 @@
       <section class="main_box" id="intro">
         <div style="background-color: #000; filter: blur(5px);"></div> <!-- 블러효과 -->
         <div style="display: none;" data-fadeIn="true" data-fadeInDuration="1000">
-          <h1>106Bytes</h1>
+          <h1>106BYTES</h1>
           <h2 style="margin-bottom: 3em">미래를 향한 비트의 향연</h2>
           <a class="intro-btn-goto-project scrolly" data-gravity="bottom" href="#projects">프로젝트 보기</a>
         </div>
       </section>
 
       <section class="main_box" id="about">
+      <div class="container">
         <h1>우리는 누구일까요?</h1>
-        <p>
-          저희는 '106바이트' 팀입니다.<br>
-          프로그래밍을 중심으로 컴퓨터 공학에 대해 함께 배우고,<br>
-          여러 프로젝트를 진행하고 있습니다.<br><br>
-          <br>
-          <br>
-          저희는 한국의 전주, 전일고등학교에서 조직되었고 활동하고 있습니다.<br>
-          SINCE 2017<br>
-          <br>
-          <br>
-          <hr width="10%">
-          <br>
-          <h2>팀 로고</h2>
-          <br>
-          (아직 로고는 준비 중입니다)<br>
-          <div class="team-profile-item team-profile-teamlogoitem">
-            <img class="team-profile-img" src="../img/profile/h-jeon.png"/>
-            <h3>106Bytes</h3>
-            team-106bytes.github.io
+        <div class="content">
+          <div class="j">
+            저희는 '106바이트' 팀입니다.<br>
+            프로그래밍을 중심으로 컴퓨터 공학에 대해 함께 배우고,<br>
+            여러 프로젝트를 진행하고 있습니다.<br>
+            <br>
+            저희는 한국의 전주, 전일고등학교에서 조직되었고 활동하고 있습니다.<br>
+            SINCE 2017<br>
           </div>
-          <br>
-          더 알고 싶으시다면, 저희의 프로젝트들을 눈여겨 봐 주세요.<br>
-        </p>
+          <hr width="10%" style="border-color:#000;">
+          <div class="c">
+            <br>
+            <h2>팀 로고</h2>
+            <br>
+            (아직 로고는 준비 중입니다)<br>
+            <div class="team-profile-item team-profile-teamlogoitem">
+              <img class="team-profile-img" src="../img/profile/h-jeon.png"/>
+              <h3>106Bytes</h3>
+              team-106bytes.github.io
+            </div>
+            <br>
+            더 알고 싶으시다면, 저희의 프로젝트들을 눈여겨 봐 주세요.<br>
+          </div>
+        </div>
+      </div>
       </section>
+
+      <div class="division"></div>
 
       <section class="main_box" id="projects">
         <h1>프로젝트</h1>
@@ -119,6 +125,8 @@
           지원되지 않는 부라우저입니다.
         </iframe-->
       </section>
+
+      <div class="division"></div>
 
       <section class="main_box" id="team">
         <h1>팀원들</h1>
@@ -147,10 +155,15 @@
         <a class="btn btn-primary" href="#">ㅌㅅㅌ</a>
       </div>-->
 
+      <div class="division"></div>
+
     </div><!-- /.container -->
 
 
     <footer>
+      <div class="container l">
+        2017 ⓒ 106Bytes and Jeonil High School    |    team-106bytes.github.io
+      </div>
     </footer>
 
     <!-- Bootstrap core JavaScript
