--- a/join/index.html
+++ b/join/index.html
@@ -99,6 +99,10 @@
         }
       }
 
+      p {
+        text-decoration: line-through;
+      }
+
     </style>
 
   </head>
@@ -121,6 +125,9 @@
         <br>
         저희가 당부해드리고 싶은 점은, 의지없이 활동할 학생, 상습적으로 동아리 활동을 하지 않을 학생들은 지원하지 않았으면 좋겠습니다.<br>
       </p>
+      <br>
+      <br>
+      현재는 모집기간이 아닙니다.<br>
       <p>
         <br>
         <center><a class="btn" href="https://goo.gl/forms/mG3NGEKAsJgliVHL2">지원하기</a></center>
